--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-source-filesystem": "^2.1.25",
     "gatsby-source-strapi": "0.0.9",
     "gatsby-transformer-sharp": "^2.2.16",
+    "markdown-it": "10.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
