--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "styled-components": "4.4.0"
   },
   "devDependencies": {
+    "cypress": "3.4.1",
     "prettier": "^1.18.2"
   },
   "keywords": [
