--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "gatsby-plugin-prefetch-google-fonts": "1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.8",
     "gatsby-plugin-sharp": "^2.2.25",
+    "gatsby-plugin-transition-link": "1.13.0",
     "gatsby-source-filesystem": "^2.1.25",
     "gatsby-source-strapi": "0.0.9",
     "gatsby-transformer-sharp": "^2.2.16",
+    "gsap": "2.1.3",
     "markdown-it": "10.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
