--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "smoothscroll-polyfill": "0.4.4",
     "styled-components": "4.4.0",
     "styled-theming": "2.2.0"
   },
