--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "animate.css": "3.7.2",
     "gatsby": "^2.15.19",
     "gatsby-image": "^2.2.20",
     "gatsby-plugin-manifest": "^2.2.18",
@@ -21,11 +22,13 @@
     "markdown-it": "10.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
+    "react-animated-css": "1.2.1",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "smoothscroll-polyfill": "0.4.4",
     "styled-components": "4.4.0",
-    "styled-theming": "2.2.0"
+    "styled-theming": "2.2.0",
+    "use-in-view": "1.0.15"
   },
   "devDependencies": {
     "cypress": "3.4.1",
