--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-source-strapi": "0.0.9",
     "gatsby-transformer-sharp": "^2.2.16",
     "gsap": "2.1.3",
+    "lodash.throttle": "4.1.1",
     "markdown-it": "10.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
