--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "react-helmet": "^5.2.1",
     "smoothscroll-polyfill": "0.4.4",
     "styled-components": "4.4.0",
-    "styled-theming": "2.2.0",
-    "use-in-view": "1.0.15"
+    "styled-theming": "2.2.0"
   },
   "devDependencies": {
     "cypress": "3.4.1",
