--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-scrollbars-custom": "4.0.21",
+    "react-swipeable": "5.4.0",
     "smoothscroll-polyfill": "0.4.4",
     "styled-components": "4.4.0",
     "styled-theming": "2.2.0"
