--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-cli": "^2.12.116",
     "gatsby-image": "^2.2.20",
     "gatsby-plugin-google-fonts": "1.0.1",
+    "gatsby-plugin-intl": "0.3.3",
     "gatsby-plugin-manifest": "^2.2.18",
     "gatsby-plugin-offline": "^3.0.8",
     "gatsby-plugin-react-helmet": "^3.1.8",
